--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,40 @@
-# База данных SQLite
-db.sqlite3
-
-# Файлы конфигурации
-.env
-
-# Виртуальная среда
-.venv/
-venv/
-env/
-
-# Файлы статических файлов
-/staticfiles/
-
-# Миграции
-*/migrations/
-
-# Файлы IDE и редакторов
-.idea/
-
-# PyCharm
-*.iml
-
-# Документы отчётов
-*.log
-*.pot
-*.mo
-
-# Cигнализаторы среды
-*.bak
-*.swp
-
-# Папки, которые могут быть созданы системой в процессе работы
-*.DS_Store
-
-
-
-ненужные_коды.txt
-Краткая документация по проделанной работе.txt
-Точные данные.txt
+## База данных SQLite
+#db.sqlite3
+#
+## Файлы конфигурации
+#.env
+#
+## Виртуальная среда
+#.venv/
+#venv/
+#env/
+#
+## Файлы статических файлов
+#/staticfiles/
+#
+## Миграции
+#*/migrations/
+#
+## Файлы IDE и редакторов
+#.idea/
+#
+## PyCharm
+#*.iml
+#
+## Документы отчётов
+#*.log
+#*.pot
+#*.mo
+#
+## Cигнализаторы среды
+#*.bak
+#*.swp
+#
+## Папки, которые могут быть созданы системой в процессе работы
+#*.DS_Store
+#
+#
+#
+#ненужные_коды.txt
+#Краткая документация по проделанной работе.txt
+#Точные данные.txt
